--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: '${project.name}'
 version: '${project.version}'
 main: com.vexmi.escapadelabestia.EscapaBestia
-load: STARTUP
+load: POSTWORLD
 authors: [ Adrigamer2950 ]
 description: '${project.description}'
 softdepend:
