--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -9,7 +9,7 @@ Messages:
   GameIsAlreadyDisabled: "&cThat game is already disabled!"
   PlayerIsInGame: "&cYou cannot join a game if you are already in a game!"
   PlayerIsntInGame: "&cYou need to be in a game to get out of it!"
-  TheGameStarted: "&cYou cannot join this game beacuse that game started!"
+  TheGameHasStarted: "&cYou cannot join this game beacuse that game has already started!"
   DeletedGame: "&aThe game &6%game% &awas deleted successfully."
   PluginReloaded: "&aConfig, Games, MainLobby and Messages reloaded successfully!"
   CreatedLobby: "&aLobby for game &6%game% &acreated successfully!"
@@ -31,9 +31,14 @@ Messages:
   PlayerLeaveGame: "&6%player% salió de la partida. &b(&a%actualplayers%&b/&a%maxplayers%&b)"
   GameStartCooldown: "&aEl juego empezará en: &6%time% &asegundos!"
   GameFinishCooldown: "&aTenéis &6%time% &asegundos para matar a la bestia o perderéis!"
+  BestiaCooldown: "&aLa bestia será liberada en &6%bestiaTime% segundos!"
+  BestiaLiberada: "&aLa bestia fue liberada!, tenéis &6%time% &apara acabar con la bestia."
   NotEnoughPlayers: "&cThere are not enough players to start the game!"
-  StartGame: "&aLa partida ha empezado! La bestia será liberada en 10 segundos!"
+  StartGame: "&aLa partida ha empezado!"
   BestiaWin: "&cGana la bestia!"
   PlayersWin: "&aGanan los jugadores!"
-  PlayerDeath: "&cLa bestia (&4&l%killer%&r&c) te ha asesinado!"
+  PlayerDeath: "&cLa bestia (&4&l%bestia%&r&c) te ha asesinado!"
   PlayerKill: "&2Has asesinado a %player%"
+  PlayerDead: "&c%player% ha muerto!"
+  BestiaDead: "&cLa bestia (&4&l%bestia%&r&c) ha muerto!"
+  PlayerDeadByBestia: "&c%player% ha muerto víctima la bestia (&4&l%bestia%&r&c)!"
